--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -26,7 +26,7 @@
   },
   "forwardPorts": [3000],
   "containerUser": "vscode",
-  "postCreateCommand": "yarn install",
+  "postCreateCommand": "COREPACK_ENABLE_DOWNLOAD_PROMPT=0 yarn install",
   "waitFor": "postCreateCommand", // otherwise automated jest tests fail
   "features": {
     "node": {
